<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="base.SettingsActivity">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
       <LinearLayout
           android:layout_width="368dp"
           android:layout_height="495dp"
           android:orientation="vertical"
           tools:layout_editor_absoluteY="8dp"
           tools:layout_editor_absoluteX="8dp">

           <TextView
               style="@style/labelStyle"
               android:text="@string/name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settingsName"/>
           <TextView
               style="@style/labelStyle"
               android:text="@string/operatoren"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
                   <Button
                       style="@style/floatButtonStyle"
                       android:id="@+id/plus"
                       android:text="@string/plus"
                       android:onClick="clickRechenoperation"/>
                   <Button
                       style="@style/floatButtonStyle"
                       android:id="@+id/minus"
                       android:text="@string/minus"
                       android:onClick="clickRechenoperation"/>
                   <Button
                       style="@style/floatButtonStyle"
                       android:id="@+id/mal"
                       android:text="@string/mal"
                       android:onClick="clickRechenoperation"/>
                   <Button
                       style="@style/floatButtonStyle"
                       android:id="@+id/durch"
                       android:text="@string/durch"
                       android:onClick="clickRechenoperation"/>
           </LinearLayout>
           <TextView
               style="@style/labelStyle"
               android:text="@string/zahlenraum"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <Button
                   style="@style/floatButtonStyle"
                   android:id="@+id/zahlenraum1"
                   android:text="@string/zehn"
                   android:onClick="clickZahlenraum"/>
               <Button
                   style="@style/floatButtonStyle"
                   android:id="@+id/zahlenraum2"
                   android:text="@string/zwanzig"
                   android:onClick="clickZahlenraum"/>
               <Button
                   style="@style/floatButtonStyle"
                   android:id="@+id/zahlenraum3"
                   android:text="@string/fuenfzig"
                   android:onClick="clickZahlenraum"/>
               <Button
               style="@style/floatButtonStyle"
                   android:id="@+id/zahlenraum4"
                   android:text="@string/hundert"
                   android:onClick="clickZahlenraum"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
               <Button
                   style="@style/floatButtonStyle"
                   android:id="@+id/zahlenraum5"
                   android:text="@string/zweifuenfzig"
                   android:onClick="clickZahlenraum"/>
               <Button
                   style="@style/floatButtonStyle"
                   android:id="@+id/zahlenraum6"
                   android:text="@string/fuenfhundert"
                   android:onClick="clickZahlenraum"/>
               <Button
                   style="@style/floatButtonStyle"
                   android:id="@+id/zahlenraum7"
                   android:text="@string/tausend"
                   android:onClick="clickZahlenraum"/>
           </LinearLayout>

           <TextView
               style="@style/labelStyle"
               android:text="@string/maxpunktezahl"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <ImageButton
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:src="@drawable/star_transparent"
                   android:scaleType="centerCrop"
                   android:background="@null"
                   />
           <TextView
               android:id="@+id/highscoreView"
               style="@style/labelStyle"
               android:textSize="@dimen/setting_highscore_size"
               android:text="" />
           </LinearLayout>
       </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
