<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="base.GameActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!--History Box (1-12)-->

        <LinearLayout
            android:id="@+id/historyBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <!--Time and points-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageTime"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/zeit_transparent"
                    android:contentDescription="@string/time" />

                <TextView
                    android:id="@+id/timeBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageTime"
                    android:padding="5dp"
                    android:text="@string/zero"
                    android:textAlignment="viewStart" />

                <ImageView
                    android:id="@+id/imagePoints"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="end"
                    android:layout_toStartOf="@+id/pointBox"
                    app:srcCompat="@drawable/star_transparent"
                    android:contentDescription="@string/punkte" />

                <TextView
                    android:id="@+id/pointBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageTime"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:text="@string/zero"
                    android:textAlignment="viewEnd" />
            </RelativeLayout>

            <!--Shows the calculation and the entered result-->

            <TextView
                android:id="@+id/exerciseBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textAlignment="center"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/answerBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textAlignment="center"
                android:textSize="15pt" />
        </LinearLayout>

        <!-- Keyboard for input
         Delete the input
         To the next calculation-->

        <LinearLayout
            android:id="@+id/digitsBlock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonOne"
                    style="@style/calcButtons"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/buttonTwo"
                    android:background="@drawable/transparent_1"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/buttonTwo"
                    style="@style/calcButtons"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/transparent_2"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/buttonThree"
                    style="@style/calcButtons"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/buttonTwo"
                    android:background="@drawable/transparent_3"
                    android:text="@string/three" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonFour"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/buttonFive"
                    android:background="@drawable/transparent_4"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/buttonFive"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/transparent_5"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/buttonSix"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/buttonFive"
                    android:background="@drawable/transparent_6"
                    android:text="@string/six" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSeven"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/buttonEight"
                    android:background="@drawable/transparent_7"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/buttonEight"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/transparent_8"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/buttonNine"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/buttonEight"
                    android:background="@drawable/transparent_9"
                    android:text="@string/nine" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/buttonZero"
                    android:background="@drawable/del_transparent"
                    android:onClick="onBack"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/buttonZero"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/transparent_0"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/buttonNext"
                    style="@style/calcButtons"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/buttonZero"
                    android:background="@drawable/weiter_transparent"
                    android:onClick="next"
                    android:text="@string/go" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
